updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring web developer and sneakerhead.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Pontiac, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to play basketball, soccer, photography, graphic design, and BMX</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to be self-employed.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I still Live here in Michigan</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a web developer to help give back my skills as a resource for my community.</p>
     </section>
 
     <footer id="footer">
